ccvt_checks_works_approve_disapprove

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10912,4 +10912,9 @@ a.text-dark:focus {
 .card-body {
   background: aliceblue !important;
 }
+.ellipsis {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
 
