--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10919,3 +10919,31 @@ a.text-dark:focus {
     white-space: nowrap;
     text-overflow: ellipsis;
 }
+.button-add{
+  font-family:nunito;
+  font-size:0.9rem;
+  background-color:#fff;
+  color:#7A97B3;
+  float:right;
+  font-weight: 600;
+}
+.button-add:hover{
+  outline: none !important;
+  font-family:nunito;
+  font-size:0.9rem;
+   background-color:#7A97B3;
+  color:#fff;
+  float:right;
+  font-weight: 600;
+  
+
+}
+
+.custom-card-header-span{
+    background-color: #7a97b3;
+    color: white;
+    font-weight: bold;
+    top: 8px;
+    position: relative;
+
+}
