--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1772,7 +1772,7 @@ pre code {
   width: 100%;
   margin-bottom: 1rem;
   color: #212529;
-  
+
 }
 
 .table th,
@@ -10935,7 +10935,7 @@ a.text-dark:focus {
   color:#fff;
   float:right;
   font-weight: 600;
-  
+
 
 }
 
@@ -11034,3 +11034,13 @@ float: right;
 #thn{
   width:1% !important;
 }
+.custom_searchfilter_position{
+    position: relative;
+    top: -10px;
+    right: 59%;
+
+}
+.sizecheck{
+    width:150px;
+}
+
