add_num_of_devscolumn_email_settings

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11058,6 +11058,17 @@ float: right;
     top: -10px;
     left: -61px;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
 
                                     /*Custom Media Queries starting*/
 
