--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1772,7 +1772,6 @@ pre code {
   width: 100%;
   margin-bottom: 1rem;
   color: #212529;
-
 }
 
 .table th,
@@ -1780,7 +1779,6 @@ pre code {
   padding: 0.75rem;
   vertical-align: top;
   border-top: 1px solid #dee2e6;
-
 }
 
 .table thead th {
@@ -10914,27 +10912,28 @@ a.text-dark:focus {
 .card-body {
   background: aliceblue !important;
 }
+
 .ellipsis {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 .button-add{
-  font-family:nunito;
-  font-size:0.9rem;
-  background-color:#fff;
-  color:#7A97B3;
-  float:right;
-  font-weight: 600;
+    font-family:nunito;
+    font-size:0.9rem;
+    background-color:#fff;
+    color:#7A97B3;
+    float:right;
+    font-weight: 600;
 }
 .button-add:hover{
-  outline: none !important;
-  font-family:nunito;
-  font-size:0.9rem;
-   background-color:#7A97B3;
-  color:#fff;
-  float:right;
-  font-weight: 600;
+    outline: none !important;
+    font-family:nunito;
+    font-size:0.9rem;
+    background-color:#7A97B3;
+    color:#fff;
+    float:right;
+    font-weight: 600;
 
 
 }
@@ -10955,55 +10954,55 @@ a.text-dark:focus {
 
 }
 .action_header{
-  position: relative;
-  text-align: center;
+    position: relative;
+    text-align: center;
 }
 .deactivated{
-  background: #ccc;
+    background: #ccc;
 }
 body.swal2-shown > [aria-hidden="true"] {
-  filter: blur(10px);
+    filter: blur(10px);
 }
 
 body > * {
-  transition: 0.1s filter linear;
+    transition: 0.1s filter linear;
 }
 .custom_serachbar_position{
-  position: relative;
-  top:-10px;
+    position: relative;
+    top:-10px;
 }
 .custom_row_position{
-float: right;
+    float: right;
 }
 .custom_search_border:focus{
     border-color:#7A97B3;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(122, 151, 179, 0.5);
 }
 .custom_span_search_results{
-  padding-bottom:5%;
-  visibility: hidden;
+    padding-bottom:5%;
+    visibility: hidden;
 }
 .custom_p{
-  position: relative;
-  text-align: center;
+    position: relative;
+    text-align: center;
 }
 .custom_warning{
-  position: relative;
+    position: relative;
     left: 106%;
     width: 128%;
     top: 6px;
 }
 .custom_para_results{
-  position: relative;
-  text-align: center;
+    position: relative;
+    text-align: center;
 }
 .custom_user_search{
-  left: 82%;
+    left: 82%;
     top: 10px;
     position: relative;
 }
 .custom_warning_license{
-  position: relative;
+    position: relative;
     left: 182%;
     top: 10px;
     width: 400%;
@@ -11015,7 +11014,7 @@ float: right;
     width: 400%;
 }
 .custom_warning_pending_commission{
-      position: relative;
+    position: relative;
     left: 115%;
     width: 500%;
     top: 6px;
@@ -11027,19 +11026,19 @@ float: right;
     top: 6px;
 }
 .custom_warning_salesperson_activated{
- position: relative;
+    position: relative;
     left: 166%;
     width: 246%;
     top: 6px;
 }
 .custom_warning_license_sp{
- position: relative;
+    position: relative;
     left: 101%;
     width: 193%;
     top: 6px;
 }
 #thn{
-  width:1% !important;
+    width:1% !important;
 }
 .custom_searchfilter_position{
     position: relative;
@@ -11118,8 +11117,8 @@ input[type=number] {
 .nav-tabs>li.active>a:focus{background-color: #7A97B3 !important; color:white !important;}
 .nav-tabs>li>a:focus{background-color: #7A97B3 !important; color:white !important;}
 .nav-tabs>li>a:focus #hometab{background-color: white !important;}
-.nav-tabs>li.active>a{background-color: #7A97B3 !important; color:white !important;}
-                                    /*Custom Media Queries starting*/
+.nav-tabs>li.active>a{background-color: #a1b5d9 !important; color:white !important;}
+/*Custom Media Queries starting*/
 
 
 @media (max-width: 280px) {
