--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11118,6 +11118,16 @@ input[type=number] {
 .nav-tabs>li>a:focus{background-color: #7A97B3 !important; color:white !important;}
 .nav-tabs>li>a:focus #hometab{background-color: white !important;}
 .nav-tabs>li.active>a{background-color: #a1b5d9 !important; color:white !important;}
+
+.form-activation{
+  position: relative;
+  
+}
+.btn-license{
+  background:#7a97b3;
+  color:white !important;
+}
+
 /*Custom Media Queries starting*/
 
 
