sales person commission fixces

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11275,3 +11275,7 @@ input[type=number] {
 
 /*// Extra large devices (large desktops, 1200px and up)*/
 @media (min-width: 1200px) {  }
+
+.hidden{
+  display: none;
+}
